Fix content panel wrapper z-index (#954)
* Setting combobox width to 100%

* Setting combobox width to 100%

* Setting combobox width to 100%

* Fix content panel wrapper z-index

* Fix content panel wrapper z-index

--- a/src/clr-addons/content-panel/content-panel.scss
+++ b/src/clr-addons/content-panel/content-panel.scss
@@ -33,7 +33,7 @@
 
   .content-panel-content-wrapper {
     background-color: var(--clr-global-app-background);
-    z-index: map-get($clr-layers, dropdown-menu) - 1;
+    z-index: map-get($clr-layers, sidepanel-bg) - 1;
     padding: 1rem;
     position: absolute;
     top: 0;
@@ -79,7 +79,7 @@
     left: 0;
     background-color: var(--clr-color-neutral-900);
     opacity: 0.85;
-    z-index: map-get($clr-layers, dropdown-menu) - 2;
+    z-index: map-get($clr-layers, sidepanel-bg) - 2;
 
     @media screen and (max-width: map-get($clr-grid-breakpoints, md)) {
       display: none;
